# folder2podcast

./: README.md  pyproject.toml
folder2podcast/: folder2podcast.py
